# py-ecommerce-synth-oltp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: compare_query_performance.md  task_report.md
docs/diagram/: schema.dbml
notebooks/: generate_data.ipynb
queries/: 01_revenue_per_month.sql  02_orders_by_seller_date.sql  03_items_by_product.sql  04_highest_order.sql  05_top_products_by_quantity.sql  06_seller_orders_october.sql  07_product_revenue_per_month.sql  08_products_per_seller.sql
queries/execution_plans/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json
sql/: create_indexes.sql  create_partitions.sql  generate_order_items.sql  migrate_to_partitions.sql  update_order_totals.sql
sql/reports/: daily_revenue_report.sql  monthly_revenue_report.sql  orders_status_summary.sql  seller_performance_report.sql  top_products_by_brand.sql
src/: main.py
src/mock_ecommerce/: config.py  constants.py  exceptions.py  schema.py  schemas.py
src/mock_ecommerce/database/: __init__.py  connection.py  ddl.py  exceptions.py  operations.py
src/mock_ecommerce/generators/: __init__.py  base.py  brand.py  category.py  exceptions.py  order.py  product.py  promotion.py  promotion_product.py  seller.py
src/mock_ecommerce/pipelines/: generate_ecom_data.py
src/mock_ecommerce/stages/: master_data.py  reference_data.py  setup.py  transactional_data.py
src/mock_ecommerce/tasks/: brand.py  generate_data_into_database.py  setup.py
src/mock_ecommerce/utils/: logger.py
src/scripts/: init_db.py
