[project]
name = "py-ecommerce-synth-oltp"
version = "0.1.0"
description = "Generate synthetic data for an E-commerce OLTP system"
authors = [
    {name = "thuphan",email = "thuleanhphan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "mock_ecommerce", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
